<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
        />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:id="@+id/vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/token_info_is_authed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/token_info_auth_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/edit_access_token">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_edit_access_token"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/edit_refresh_token">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_edit_refresh_token"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/token_info_token_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/edit_expires_in">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_edit_expires_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/edit_created_at">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_edit_created_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/token_info_scopes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/bttn_submit"
                    />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>